# blit

./: AUTHORS.txt  LICENSE_BSD.txt  Makefile  README.md
.github/: check-pypi-upload.sh
.github/manylinux2014_wheel_builder/: Dockerfile  build_wheels.sh
.github/workflows/: build_linux_manywheel.yml  build_macos_wheel.yml  build_windows_wheel.yml
blit_cpp/example/: Makefile  blqmr_test.cpp  passdata.c
blit_f90/src/blqmr/: Makefile  blit_blqmr.f90  blit_blqmr_sub.f90  blit_const.f90  blit_ilupcond.f90  blit_matrixutil.f90  blit_matrixutil_sub.f90  blit_sparseutil.f90  blit_sparseutil_sub.f90
blit_f90/src/libblqmr/: blit_blqmr.f90  blit_blqmr_sub.f90  blit_const.f90  blit_ilupcond.f90  blit_matrixutil.f90  blit_matrixutil_sub.f90  blit_sparseutil_sub.f90  umf4_f77wrapper.c
blit_matlab/: blqmr.m  qqr.m
commons/: Makefile_common.mk
cpp/example/: Makefile  blqmr_test.cpp  passdata.c  passdataplus.cpp
doc/: Preconditioner-Guide.md
include/: blit_solvers.h
matlab/: blqmr.m  qqr.m
matlab/src/: Makefile  blit_mex.map  blqmr_mex.c  blqmr_mex.f90  bundle_deps.sh
matlab/test/: benchmark_blqmr.m  benchmark_blqmr_blocksize.m  benchmark_rhs_sweep.m  blqmr_bench_parallel.m  blqmr_compare.m  blqmr_mex_test.m  meshgrid6.m
python/: Makefile  README.md  blit_blqmr.pyf  meson.build  pyproject.toml  setup.py
python/blit/: __init__.py  blqmr.py
python/blocksolver/: __init__.py  blqmr.py
python/tests/: benchmark_block_size.py  benchmark_blqmr.py  benchmark_omp_test.py  benchmark_parallel_threads.py  benchmark_rhs_sweep.py  test_blqmr.py
src/: Makefile  blit_blas_threads.c  blit_blqmr.f90  blit_blqmr_f2py.f90  blit_blqmr_sub.f90  blit_const.f90  blit_ilupcond.f90  blit_matrixutil.f90  blit_matrixutil_sub.f90  blit_sparseutil.f90  blit_sparseutil_sub.f90  umf4_f77wrapper.c
